--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
+    "casbin": "<=5.9.0 || >5.9.1",
     "coveralls": "^3.1.0",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.9",
     "mysql2": "^2.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.1.0",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.5",
-    "casbin": "<=5.9.0 || >5.9.1"
+    "typescript": "^3.9.5"
   },
   "peerDependencies": {
     "casbin": "<=5.9.0 || >5.9.1"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13",
-    "sequelize": "6.6.2",
-    "sequelize-typescript": "^2.1.0"
+    "sequelize": "6.10.0",
+    "sequelize-typescript": "2.1.2"
   },
   "files": [
     "lib",
